Bug 178364 - Preselection field appears in wrong place
Summary: Preselection field appears in wrong place
Status: RESOLVED FIXED
Alias: None
Product: kcron
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Gary Meyer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-21 14:02 UTC by Biro Arpad
Modified: 2010-10-20 02:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot for bug (64.83 KB, image/png)
2008-12-21 14:04 UTC, Biro Arpad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Biro Arpad 2008-12-21 14:02:22 UTC
Version:            (using Devel)
Compiler:          GCC 4.3.3 
OS:                Linux
Installed from:    Compiled sources

in KDE 4.1.85 (4.2 beta2) (SUSE KDE Four Live CD):

1. launch the Task Scheduler
2. press the "New Task" button
3. choose an item from the Preselection list in the "Minutes" box (you can even choose the default value, "Custom Selection" again)

The "Preselection" input field and the "Preselection" string appears on top of the minute boxes. See screenshot.
Comment 1 Biro Arpad 2008-12-21 14:04:15 UTC
Created attachment 29518 [details]
Screenshot for bug
Comment 2 FiNeX 2008-12-21 19:33:55 UTC
confirmed in current trunk
Comment 3 Christoph Feck 2010-10-20 02:30:21 UTC
SVN commit 1187654 by cfeck:

Invalidate layout after changing it

BUG: 178364


 M  +5 -1      taskEditorDialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1187654