Invalidate layout after changing it

BUG: 178364

svn path=/trunk/KDE/kdeadmin/kcron/; revision=1187654